# LibGizmo

./: .gitignore  CMakeLists.txt  libgizmo.qbs
inc/: IGizmo.h
src/glfw/: main.cpp
src/glfw3/: ArcBall.cpp  CMakeLists.txt  glut_teapot.c  glut_teapot.h  main.cpp
src/glloadgen/: gizmo.sh  gl_gizmo.c  gl_gizmo.h
src/libgizmo/: GizmoTransform.h  GizmoTransformMove.cpp  GizmoTransformRender.cpp  GizmoTransformRender.h  GizmoTransformRotate.cpp  ZBaseMaths.inl  ZMathsFunc.h
