cmake_minimum_required(VERSION 2.8.9)
project(gizmo)

set(libgizmo_sources_base_dir "${CMAKE_CURRENT_SOURCE_DIR}/src/libgizmo")
set(LIBGIZMO_SOURCES_CORE
    ${CMAKE_CURRENT_SOURCE_DIR}/inc/IGizmo.h
    ${libgizmo_sources_base_dir}/GizmoTransform.h
    ${libgizmo_sources_base_dir}/GizmoTransformMove.cpp
    ${libgizmo_sources_base_dir}/GizmoTransformMove.h
    ${libgizmo_sources_base_dir}/GizmoTransformRender.cpp
    ${libgizmo_sources_base_dir}/GizmoTransformRender.h
    ${libgizmo_sources_base_dir}/GizmoTransformRotate.cpp
    ${libgizmo_sources_base_dir}/GizmoTransformRotate.h
    ${libgizmo_sources_base_dir}/GizmoTransformScale.cpp
    ${libgizmo_sources_base_dir}/GizmoTransformScale.h
    ${libgizmo_sources_base_dir}/LibBase.h
    ${libgizmo_sources_base_dir}/ZBaseDefs.h
    ${libgizmo_sources_base_dir}/ZBaseMaths.cpp
    ${libgizmo_sources_base_dir}/ZBaseMaths.h
    ${libgizmo_sources_base_dir}/ZBaseMaths.inl
    ${libgizmo_sources_base_dir}/ZCollisionsUtils.h
    ${libgizmo_sources_base_dir}/ZMathsFunc.cpp
    ${libgizmo_sources_base_dir}/ZMathsFunc.h
    ${libgizmo_sources_base_dir}/stdafx.h
)

find_path(GLEW_INCLUDE_DIR GL/glew.h "${CMAKE_CURRENT_SOURCE_DIR}/../libvpvl2/vendor/GLEW-1.10.0" NO_DEFAULT_PATH)
include_directories(${GLEW_INCLUDE_DIR})
if(NOT WIN32)
  find_path(GLEW_SOURCE_LOCATION glew.c "${CMAKE_CURRENT_SOURCE_DIR}/../libvpvl2/vendor/GLEW-1.10.0" NO_DEFAULT_PATH)
  add_library(${PROJECT_NAME} ${LIBGIZMO_SOURCES_CORE} "${GLEW_SOURCE_LOCATION}/glew.c")
else()
  add_library(${PROJECT_NAME} ${LIBGIZMO_SOURCES_CORE})
endif()

find_package(OpenGL REQUIRED)
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/inc" ${OPENGL_INCLUDE_DIR})
target_link_libraries(${PROJECT_NAME} ${OPENGL_gl_LIBRARY})

if(EXAMPLE_GLFW)
  set(LIBGIZMO_SOURCES_EXAMPLE_GLFW ${CMAKE_CURRENT_SOURCE_DIR}/src/glfw/main.cpp)
  add_executable(gizmo_glfw ${LIBGIZMO_SOURCES_EXAMPLE_GLFW})
  find_library(GLFW_LIBRARY glfw)
  target_link_libraries(gizmo_glfw ${GLFW_LIBRARY} ${PROJECT_NAME})
endif()
